feat: Update project name and metadata for live deployment
Reflects the official "LIVE" designation in package.json and metadata.json. Enhances description with more specific details about the project's establishment and core principles. Expands type definitions to include new block data types ('VERIFICATION_ATTEMPT', 'BREACH_REPORT') and updates AI service function signatures and descriptions for better clarity and expanded capabilities. Adds new icons for enhanced UI representation of diverse functionalities.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "signasovereign-v4.2.1",
+  "name": "signasovereign-v4.2.1-live",
   "private": true,
   "version": "0.0.0",
   "type": "module",
